dlvhex NEWS -- history of user-visible changes.

* Version 2.5.0 (??)

** External atom semantics was extended such that they may be evaluated under partial assignments (performance improvements).
** Extended Python plugin API.
** Support for input and output in CSV format.
** Support for choice rules.
** Support for conditional literals.
** Support aggregates with multi-component symbolic sets.
** More efficient implementation of weak constraints.
** dlvhex is now compliant with ASP-Core-2 standard.
** Code cleanup, bugfixes and stability improvements, improved error and warning messages.
** New default options: strong negation, liberal safety and external learning methods are enabled by default (increased efficiency, decreased syntactic restrictions).
** Complete doxygen documentation.
** The solver backend was upgraded to Clasp 3.1.4 and Gringo 4.5.4.

* Version 2.4.0 (September 2014)

** A new interface which support plugins to be implemented in Python.
** An alternative algorithm for external source compatibility checking based on support sets.
** A plugin interface for customized model generators.
** Numerous bugfixes and optimizations.
** The solver backend was upgraded to Gringo 4.4.0 Clasp 3.1.0.

* Version 2.3.0 (December 2013)

** Various performance improvements and bugfixes.
** Fine-tuning of heuristics.
** See Changelog for minor changes and more details.

* Version 2.2.0 (August 2013)

** Support for function symbols (see examples/functionsymbols<N>.hex)
** Existentials in the head (see examples/exists<N>.hex)
** Liberal safety (see examples/liberalsafety<N>.hex)
** Various performance improvements and bugfixes.
** See Changelog for minor changes and more details.

* Version 2.1.0 (October 2012)

** Gringo+Clasp can now be built as part of the dlvhex build process and
   can be automatically integrated into dlvhex as default solver backend.
** New method for computing FLP semantics using Unfounded Set Checks