@@ -2,12 +2,14 @@ dlvhex NEWS -- history of user-visible changes.
 
 * Version 2.5.0 (??)
 
-** External atom semantics was extended such that they may be evaluated under partial assignments (performance improvements).
+** External atom semantics was extended to 3 values (true, false, unknown); 2-valued external atoms are still compatible.
+** Support for external atom evaluation under partial assignments (possible performance improvements).
 ** Extended Python plugin API.
 ** Support for input and output in CSV format.
 ** Support for choice rules.
 ** Support for conditional literals.
 ** Support aggregates with multi-component symbolic sets.
+** Support for interpreted function symbols.
 ** More efficient implementation of weak constraints.
 ** dlvhex is now compliant with ASP-Core-2 standard.
 ** Code cleanup, bugfixes and stability improvements, improved error and warning messages.
